# operator_custom_tg

./: .gitignore  ENV_README.md  READBOOKS.md  README.md  README_ENG.md  docker-compose.yaml  elasticsearch.yaml  pyproject.toml  settings.json
config/: airflow_local_settings.py
custom_operator/: path.py  test.py
custom_operator/crawler/: config.py  crawler.py
custom_operator/dag_description/dag_datamart/: DAG-Make_datamart.md  DAG-Make_datamart_scheduling.md
custom_operator/dag_description/dag_detect/: DAG-Detect_data_by_using_userInput.md
custom_operator/dag_description/dag_gerator/: DAG-Generate_sample_log.md
custom_operator/datamart/: dag_datamart.py  dag_schdule_datamart.py  datamart.py
custom_operator/detect/: dag_detect.py  detect.py  detect_query.json
custom_operator/elastic/: config.py  hook.py
custom_operator/generator/: dag_generator.py  dag_sample.py  generator.py  sample.py
custom_operator/practice/: paractice_custom_sensor.py  pracitce_custom_hook.py  pracitce_custom_operator.py
custom_operator/test/datamart/: teat_datamart.py
docker/: dockerfile  elasticsearch.yaml  requirements.txt
docker/dev/: docker-compose.yaml  elasticsearch.yaml
docker/import_json/: connections.json  variable.json
docker/prod/: airflow_component.yml  airflow_worker.yml  grafana.yml  metastore_mqbroker.yaml
sample_data/ilm_template/: firewall_ilm.json  iis_log_ilm.json  ips_ilm.json  waf_ilm.json
sample_data/index_template/: firewall_template.json  iis_log_template.json  ips_template.json  waf_template.json
test/elastic/: test_hook.py
(+6 files in other folders)
